# mindseye-google-auth

./: CMakeLists.txt  README.md  gitignore
examples/: scope_policy.json  service_account.json
include/mindseye/google/auth/: authority.hpp  errors.hpp  principal.hpp  scope_policy.hpp  token.hpp  token_cache.hpp
src/: authority.cpp  oauth_flow.cpp  principal.cpp  scope_policy.cpp  token_cache.cpp
